...
	android:orientation="horizontal" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">
    <ImageButton 
    android:id="@+id/play_button" 
    android:layout_width="wrap_content" 
    android:src="@drawable/play" android:layout_height="48dip">
    </ImageButton>
    
    <ImageButton 
    android:id="@+id/stop_button" 
    android:layout_width="wrap_content" 
    android:src="@drawable/stop" android:layout_height="48dip"></ImageButton>
...
