...
            android:drawableTop="@drawable/stage_dialog_button_restart"
            android:drawableTint="@drawable/stage_dialog_color_selector"
            android:text="@string/stage_dialog_restart"
            android:textColor="@color/accent" />

        <Button
            android:id="@+id/stage_dialog_button_continue"
            style="@style/StageButton"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:drawableTop="@drawable/stage_dialog_button_continue"
            android:drawableTint="@drawable/stage_dialog_color_selector"
            android:text="@string/stage_dialog_resume"
...
